recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: missing arguments for method apply in object List;
follow this method with `_' if you want to treat it as a partially applied function
var rep = List[Int]
              ^